--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,11 @@ button {
   --brown-regular: #483b33;
 
   /* FONT-SIZE */
-  --fs-61: 3.813rem;
-  --fs-49: 3.063rem;
-  --fs-39: 2.438rem;
-  --fs-31: 1.938rem;
-  --fs-25: 1.563rem;
-  --fs-20: 1.25rem;
-  --fs-16: 1rem;
+  --fs-5: 2.488rem;
+  --fs-4: 1.728rem;
+  --fs-3: 1.44rem;
+  --fs-2: 1.2rem;
+  --fs-1: 1rem;
 
   /* SPACING */
   --spacing-16: 16px;
@@ -48,11 +46,19 @@ button {
   padding: 0 var(--spacing-32);
 }
 
+@media (min-width: 700px) {
+  .container {
+    padding: 0 var(--spacing-16);
+  }
+}
 /* || GENERAL STYLES */
 
 html {
-  font-size: var(--fs-20);
   font-family: "Lora", serif;
+}
+
+body {
+  background-color: var(--white-not-pure);
 }
 
 a {
@@ -77,38 +83,117 @@ img {
   height: 100%;
 }
 
-/* || NAV */
-.nav {
-  font-size: var(--fs-25);
+.header__hamburger {
+  width: 3rem;
+  height: 3rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 0 0 auto;
 }
 
-.nav__ul {
+.header__hamburger span {
+  width: 100%;
+  height: 3px;
+  background-color: #392f29;
+}
+
+@media (max-width: 800px) {
+  .header__logo_container {
+    display: flex;
+    align-items: center;
+  }
+
+  .header__hamburger {
+    display: flex;
+  }
+}
+
+/* || NAV  DESKTOP*/
+
+.nav-desktop {
+  font-size: var(--fs-3);
+}
+
+.nav-desktop__ul {
   display: flex;
   justify-content: space-between;
+  gap: 32px;
 }
 
-.nav__li {
+.nav-desktop__li {
   list-style: none;
 }
 
-.nav__a {
+.nav-desktop__a {
   color: var(--brown-darker);
 }
 
-.nav__a:hover,
-.nav__a:focus {
+.nav-desktop__a:hover,
+.nav-desktop__a:focus {
   color: var(--green-darker);
   font-weight: 500;
 }
 
-.nav__current {
+.nav-desktop__current {
   font-weight: 800;
 }
 
-.nav__current:hover,
-.nav__current:focus {
+.nav-desktop__current:hover,
+.nav-desktop__current:focus {
   color: var(--brown-darker);
   font-weight: 800;
+}
+@media (max-width: 800px) {
+  .nav-desktop {
+    display: none;
+  }
+}
+
+/* || NAV MOBILE */
+.nav-mobile {
+  display: none;
+}
+
+@media (max-width: 800px) {
+  .nav-mobile {
+    display: none;
+    height: 100%;
+    width: 100%;
+    background-color: var(--green-darker);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding-top: var(--spacing-64);
+  }
+
+  .nav-mobile__closeBtn {
+    font-size: 64px;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 25px;
+  }
+
+  .nav-mobile__ul {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .nav-mobile__a {
+    font-size: var(--fs-3);
+    color: var(--white-pure);
+  }
+
+  .nav-mobile__a:hover {
+    font-weight: 800;
+  }
+
+  .nav-mobile__current {
+    font-weight: 800;
+  }
 }
 
 /* || HERO */
@@ -124,7 +209,7 @@ img {
   background-size: cover;
   background-position: center;
 
-  min-height: 70vh;
+  min-height: 54vh;
   min-width: 100%;
   display: flex;
   align-items: center;
@@ -138,12 +223,12 @@ img {
 }
 
 .hero__overline {
-  font-size: var(--fs-20);
+  font-size: var(--fs-3);
   margin-bottom: var(--spacing-16);
 }
 
 .hero__title {
-  font-size: var(--fs-39);
+  font-size: var(--fs-5);
   text-transform: uppercase;
   margin-bottom: var(--spacing-32);
 }
@@ -151,8 +236,23 @@ img {
 .hero__btns {
   display: flex;
   gap: 16px;
+  justify-content: flex-start;
+  align-items: center;
 }
 
+@media (max-width: 944px) {
+  .hero__card {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .hero__btns {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+}
 /* || SERVICES */
 
 .services {
@@ -170,12 +270,12 @@ img {
 }
 
 .services__title {
-  font-size: var(--fs-49);
+  font-size: var(--fs-5);
   margin-bottom: var(--spacing-16);
 }
 
 .services__subtitle {
-  font-size: var(--fs-31);
+  font-size: var(--fs-4);
   margin-bottom: var(--spacing-48);
 }
 
@@ -184,7 +284,13 @@ img {
 }
 
 .services__caption {
-  font-size: var(--fs-25);
+  font-size: var(--fs-3);
+}
+
+@media (max-width: 800px) {
+  .services {
+    grid-template-columns: 1fr;
+  }
 }
 
 /* || FOOTER */
@@ -193,7 +299,7 @@ img {
   background-color: var(--green-darker);
   color: var(--white-pure);
   padding: var(--spacing-104) 0 var(--spacing-32);
-  font-size: var(--fs-16);
+  font-size: var(--fs-1);
 }
 
 .footer__container {
@@ -207,7 +313,6 @@ img {
 
 .footer__col {
   width: 50%;
-
   gap: 32px;
 }
 
@@ -227,6 +332,7 @@ img {
 
 .footer__text {
   margin-bottom: var(--spacing-24);
+  line-height: 1.6;
 }
 
 .footer__logo {
@@ -237,11 +343,35 @@ img {
   text-align: right;
 }
 .footer__copyright {
+  font-size: var(--fs-2);
 }
 
 .footer__credits {
   text-align: center;
   color: rgb(255, 255, 255, 0.8);
+  font-size: var(--fs-2);
+}
+
+@media (max-width: 800px) {
+  .footer {
+    text-align: center;
+  }
+
+  .footer__col {
+    width: 100%;
+  }
+
+  .footer__container {
+    flex-direction: column;
+  }
+
+  .footer__left {
+    flex-direction: column;
+  }
+
+  .footer__right {
+    text-align: inherit;
+  }
 }
 
 /* || ABOUT */
@@ -251,7 +381,7 @@ img {
 
 .btn {
   display: inline-block;
-  font-size: var(--fs-20);
+  font-size: var(--fs-2);
   color: var(--white-pure);
   padding: 0.5em 1.1em;
   text-transform: uppercase;
