--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,11 @@ button {
   --green-darker: #175651;
   --brown-darker: #392f29;
   --brown-regular: #483b33;
+  --brown-light: #997c6a;
 
   /* FONT-SIZE */
-  --fs-5: 2.488rem;
+  --fs-6: 2.488rem;
+  --fs-5: 2rem;
   --fs-4: 1.728rem;
   --fs-3: 1.44rem;
   --fs-2: 1.2rem;
@@ -46,7 +48,7 @@ button {
   padding: 0 var(--spacing-32);
 }
 
-@media (min-width: 700px) {
+@media (max-width: 800px) {
   .container {
     padding: 0 var(--spacing-16);
   }
@@ -74,7 +76,7 @@ img {
 .header {
   margin: 0 auto;
   text-align: center;
-  padding: 32px 0 56px;
+  padding: var(--spacing-32) 0 var(--spacing-48);
 }
 
 .header__logo {
@@ -99,6 +101,14 @@ img {
 }
 
 @media (max-width: 800px) {
+  .header {
+    padding: var(--spacing-16) 0;
+  }
+
+  .header__logo {
+    margin-bottom: 0;
+  }
+
   .header__logo_container {
     display: flex;
     align-items: center;
@@ -228,7 +238,7 @@ img {
 }
 
 .hero__title {
-  font-size: var(--fs-5);
+  font-size: var(--fs-6);
   text-transform: uppercase;
   margin-bottom: var(--spacing-32);
 }
@@ -240,9 +250,16 @@ img {
   align-items: center;
 }
 
-@media (max-width: 944px) {
+@media (max-width: 800px) {
+  .hero {
+    min-height: 70vh;
+  }
+
   .hero__card {
     width: 100%;
+  }
+  .hero__title {
+    font-size: var(--fs-5);
   }
 }
 
@@ -270,7 +287,7 @@ img {
 }
 
 .services__title {
-  font-size: var(--fs-5);
+  font-size: var(--fs-6);
   margin-bottom: var(--spacing-16);
 }
 
@@ -290,6 +307,16 @@ img {
 @media (max-width: 800px) {
   .services {
     grid-template-columns: 1fr;
+    padding: var(--spacing-64) 0;
+  }
+
+  .services__title {
+    font-size: var(--fs-5);
+  }
+
+  .services__subtitle {
+    font-size: var(--fs-3);
+    margin-bottom: 0;
   }
 }
 
@@ -350,6 +377,16 @@ img {
   text-align: center;
   color: rgb(255, 255, 255, 0.8);
   font-size: var(--fs-2);
+}
+
+.footer__link {
+  color: var(--white-pure);
+  text-decoration: underline;
+}
+
+.footer__link:hover,
+.footer__link:focus {
+  color: var(--brown-light);
 }
 
 @media (max-width: 800px) {
