--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ img {
 }
 
 .footer__text_left_col {
-  width: 20%;
+  width: 100px;
 }
 
 .footer__text_right_col {
@@ -422,6 +422,7 @@ img {
   color: var(--white-pure);
   padding: 0.5em 1.1em;
   text-transform: uppercase;
+  border: none;
 }
 
 .btn-primary {
